test/stdlib/array/array-out-of-bounds-access-negative.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func main() -> int {
    var array = Array<int>();
    array.push(42);
    // CHECK: [[@LINE+1]]:18: error: no matching function for call to 'Array<int>.[]' with argument list of type '(int)'
    return *array[-1];
}
